<?xml version="1.0"?>
<package format="3">
  <name>exploration_msgs</name>
  <version>0.4.2</version>
  <description>Exploration messages, services, and actions</description>

  <author email="paul@bovbel.com">Paul Bovbel</author>
  <author email="vickymmcd@gmail.com">Vicky McDermott</author>
  <maintainer email="paul@bovbel.com">Paul Bovbel</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>roslint</build_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
